@@ -1,6 +1,7 @@
 Overview of changes in lightdm 1.2.1
 
     * Fix wrapper path in AppArmor profile (broken since 1.1.1)
+    * Add show-manual-login and allow-guest options to lightdm-set-defaults
 
 Overview of changes in lightdm 1.2.0
 
